Added isAvailable validation for Main Menu